--- a/pytest.ini
+++ b/pytest.ini
@@ -5,13 +5,14 @@ python_classes = Test*
 python_functions = test_*
 addopts =
     -v
-    --strict-markers
     --tb=short
+    --strict-markers
+    --disable-warnings
 markers =
     slow: marks tests as slow (deselect with '-m "not slow"')
     integration: marks tests as integration tests
     unit: marks tests as unit tests
 filterwarnings =
-    error
+    ignore::Warning
     ignore::DeprecationWarning
     ignore::PendingDeprecationWarning
